@@ -9,6 +9,10 @@ IN DEVELOPMENT
       can take a ``working_dir='foo'`` parameter, which will change directory 
       for the command. (John Arbash Meinel)
 
+    * ``WorkingTree.set_root_id(None)`` is now deprecated. Please
+      pass in inventory.ROOT_ID if you want the default root id value.
+      (Robert Collins, John Arbash Meinel)
+
   BUG FIXES:
 
     * bzr branch/pull no longer complain about progress bar cleanup when
